parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> decls stmts
Rule 2     decls -> decl decls
Rule 3     decls -> empty
Rule 4     decl -> INTEIRO ID PONTO_VIRG
Rule 5     decl -> CHAR ID PONTO_VIRG
Rule 6     stmts -> stmt stmts
Rule 7     stmts -> empty
Rule 8     stmt -> ID ATRIB expr PONTO_VIRG
Rule 9     stmt -> SE LPAREN expr RPAREN stmt
Rule 10    stmt -> SE LPAREN expr RPAREN stmt SENAO stmt
Rule 11    stmt -> ENQUANTO LPAREN expr RPAREN stmt
Rule 12    expr -> expr MAIS expr
Rule 13    expr -> expr MENOS expr
Rule 14    expr -> expr VEZES expr
Rule 15    expr -> expr DIV expr
Rule 16    expr -> expr IGUAL expr
Rule 17    expr -> expr DIF expr
Rule 18    expr -> expr MENOR expr
Rule 19    expr -> expr MAIOR expr
Rule 20    expr -> expr LE expr
Rule 21    expr -> expr GE expr
Rule 22    expr -> NUM
Rule 23    expr -> STRING
Rule 24    expr -> ID
Rule 25    expr -> LPAREN expr RPAREN
Rule 26    empty -> <empty>

Terminals, with rules where they appear

ATRIB                : 8
CHAR                 : 5
DIF                  : 17
DIV                  : 15
ENQUANTO             : 11
GE                   : 21
ID                   : 4 5 8 24
IGUAL                : 16
INTEIRO              : 4
LE                   : 20
LPAREN               : 9 10 11 25
MAIOR                : 19
MAIS                 : 12
MENOR                : 18
MENOS                : 13
NUM                  : 22
PONTO_VIRG           : 4 5 8
RPAREN               : 9 10 11 25
SE                   : 9 10
SENAO                : 10
STRING               : 23
VEZES                : 14
error                : 

Nonterminals, with rules where they appear

decl                 : 2
decls                : 1 2
empty                : 3 7
expr                 : 8 9 10 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 25
program              : 0
stmt                 : 6 9 10 10 11
stmts                : 1 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . decls stmts
    (2) decls -> . decl decls
    (3) decls -> . empty
    (4) decl -> . INTEIRO ID PONTO_VIRG
    (5) decl -> . CHAR ID PONTO_VIRG
    (26) empty -> .

    INTEIRO         shift and go to state 5
    CHAR            shift and go to state 6
    ID              reduce using rule 26 (empty -> .)
    SE              reduce using rule 26 (empty -> .)
    ENQUANTO        reduce using rule 26 (empty -> .)
    $end            reduce using rule 26 (empty -> .)

    program                        shift and go to state 1
    decls                          shift and go to state 2
    decl                           shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> decls . stmts
    (6) stmts -> . stmt stmts
    (7) stmts -> . empty
    (8) stmt -> . ID ATRIB expr PONTO_VIRG
    (9) stmt -> . SE LPAREN expr RPAREN stmt
    (10) stmt -> . SE LPAREN expr RPAREN stmt SENAO stmt
    (11) stmt -> . ENQUANTO LPAREN expr RPAREN stmt
    (26) empty -> .

    ID              shift and go to state 10
    SE              shift and go to state 11
    ENQUANTO        shift and go to state 12
    $end            reduce using rule 26 (empty -> .)

    stmts                          shift and go to state 7
    stmt                           shift and go to state 8
    empty                          shift and go to state 9

state 3

    (2) decls -> decl . decls
    (2) decls -> . decl decls
    (3) decls -> . empty
    (4) decl -> . INTEIRO ID PONTO_VIRG
    (5) decl -> . CHAR ID PONTO_VIRG
    (26) empty -> .

    INTEIRO         shift and go to state 5
    CHAR            shift and go to state 6
    ID              reduce using rule 26 (empty -> .)
    SE              reduce using rule 26 (empty -> .)
    ENQUANTO        reduce using rule 26 (empty -> .)
    $end            reduce using rule 26 (empty -> .)

    decl                           shift and go to state 3
    decls                          shift and go to state 13
    empty                          shift and go to state 4

state 4

    (3) decls -> empty .

    ID              reduce using rule 3 (decls -> empty .)
    SE              reduce using rule 3 (decls -> empty .)
    ENQUANTO        reduce using rule 3 (decls -> empty .)
    $end            reduce using rule 3 (decls -> empty .)


state 5

    (4) decl -> INTEIRO . ID PONTO_VIRG

    ID              shift and go to state 14


state 6

    (5) decl -> CHAR . ID PONTO_VIRG

    ID              shift and go to state 15


state 7

    (1) program -> decls stmts .

    $end            reduce using rule 1 (program -> decls stmts .)


state 8

    (6) stmts -> stmt . stmts
    (6) stmts -> . stmt stmts
    (7) stmts -> . empty
    (8) stmt -> . ID ATRIB expr PONTO_VIRG
    (9) stmt -> . SE LPAREN expr RPAREN stmt
    (10) stmt -> . SE LPAREN expr RPAREN stmt SENAO stmt
    (11) stmt -> . ENQUANTO LPAREN expr RPAREN stmt
    (26) empty -> .

    ID              shift and go to state 10
    SE              shift and go to state 11
    ENQUANTO        shift and go to state 12
    $end            reduce using rule 26 (empty -> .)

    stmt                           shift and go to state 8
    stmts                          shift and go to state 16
    empty                          shift and go to state 9

state 9

    (7) stmts -> empty .

    $end            reduce using rule 7 (stmts -> empty .)


state 10

    (8) stmt -> ID . ATRIB expr PONTO_VIRG

    ATRIB           shift and go to state 17


state 11

    (9) stmt -> SE . LPAREN expr RPAREN stmt
    (10) stmt -> SE . LPAREN expr RPAREN stmt SENAO stmt

    LPAREN          shift and go to state 18


state 12

    (11) stmt -> ENQUANTO . LPAREN expr RPAREN stmt

    LPAREN          shift and go to state 19


state 13

    (2) decls -> decl decls .

    ID              reduce using rule 2 (decls -> decl decls .)
    SE              reduce using rule 2 (decls -> decl decls .)
    ENQUANTO        reduce using rule 2 (decls -> decl decls .)
    $end            reduce using rule 2 (decls -> decl decls .)


state 14

    (4) decl -> INTEIRO ID . PONTO_VIRG

    PONTO_VIRG      shift and go to state 20


state 15

    (5) decl -> CHAR ID . PONTO_VIRG

    PONTO_VIRG      shift and go to state 21


state 16

    (6) stmts -> stmt stmts .

    $end            reduce using rule 6 (stmts -> stmt stmts .)


state 17

    (8) stmt -> ID ATRIB . expr PONTO_VIRG
    (12) expr -> . expr MAIS expr
    (13) expr -> . expr MENOS expr
    (14) expr -> . expr VEZES expr
    (15) expr -> . expr DIV expr
    (16) expr -> . expr IGUAL expr
    (17) expr -> . expr DIF expr
    (18) expr -> . expr MENOR expr
    (19) expr -> . expr MAIOR expr
    (20) expr -> . expr LE expr
    (21) expr -> . expr GE expr
    (22) expr -> . NUM
    (23) expr -> . STRING
    (24) expr -> . ID
    (25) expr -> . LPAREN expr RPAREN

    NUM             shift and go to state 24
    STRING          shift and go to state 25
    ID              shift and go to state 22
    LPAREN          shift and go to state 26

    expr                           shift and go to state 23

state 18

    (9) stmt -> SE LPAREN . expr RPAREN stmt
    (10) stmt -> SE LPAREN . expr RPAREN stmt SENAO stmt
    (12) expr -> . expr MAIS expr
    (13) expr -> . expr MENOS expr
    (14) expr -> . expr VEZES expr
    (15) expr -> . expr DIV expr
    (16) expr -> . expr IGUAL expr
    (17) expr -> . expr DIF expr
    (18) expr -> . expr MENOR expr
    (19) expr -> . expr MAIOR expr
    (20) expr -> . expr LE expr
    (21) expr -> . expr GE expr
    (22) expr -> . NUM
    (23) expr -> . STRING
    (24) expr -> . ID
    (25) expr -> . LPAREN expr RPAREN

    NUM             shift and go to state 24
    STRING          shift and go to state 25
    ID              shift and go to state 22
    LPAREN          shift and go to state 26

    expr                           shift and go to state 27

state 19

    (11) stmt -> ENQUANTO LPAREN . expr RPAREN stmt
    (12) expr -> . expr MAIS expr
    (13) expr -> . expr MENOS expr
    (14) expr -> . expr VEZES expr
    (15) expr -> . expr DIV expr
    (16) expr -> . expr IGUAL expr
    (17) expr -> . expr DIF expr
    (18) expr -> . expr MENOR expr
    (19) expr -> . expr MAIOR expr
    (20) expr -> . expr LE expr
    (21) expr -> . expr GE expr
    (22) expr -> . NUM
    (23) expr -> . STRING
    (24) expr -> . ID
    (25) expr -> . LPAREN expr RPAREN

    NUM             shift and go to state 24
    STRING          shift and go to state 25
    ID              shift and go to state 22
    LPAREN          shift and go to state 26

    expr                           shift and go to state 28

state 20

    (4) decl -> INTEIRO ID PONTO_VIRG .

    INTEIRO         reduce using rule 4 (decl -> INTEIRO ID PONTO_VIRG .)
    CHAR            reduce using rule 4 (decl -> INTEIRO ID PONTO_VIRG .)
    ID              reduce using rule 4 (decl -> INTEIRO ID PONTO_VIRG .)
    SE              reduce using rule 4 (decl -> INTEIRO ID PONTO_VIRG .)
    ENQUANTO        reduce using rule 4 (decl -> INTEIRO ID PONTO_VIRG .)
    $end            reduce using rule 4 (decl -> INTEIRO ID PONTO_VIRG .)


state 21

    (5) decl -> CHAR ID PONTO_VIRG .

    INTEIRO         reduce using rule 5 (decl -> CHAR ID PONTO_VIRG .)
    CHAR            reduce using rule 5 (decl -> CHAR ID PONTO_VIRG .)
    ID              reduce using rule 5 (decl -> CHAR ID PONTO_VIRG .)
    SE              reduce using rule 5 (decl -> CHAR ID PONTO_VIRG .)
    ENQUANTO        reduce using rule 5 (decl -> CHAR ID PONTO_VIRG .)
    $end            reduce using rule 5 (decl -> CHAR ID PONTO_VIRG .)


state 22

    (24) expr -> ID .

    PONTO_VIRG      reduce using rule 24 (expr -> ID .)
    MAIS            reduce using rule 24 (expr -> ID .)
    MENOS           reduce using rule 24 (expr -> ID .)
    VEZES           reduce using rule 24 (expr -> ID .)
    DIV             reduce using rule 24 (expr -> ID .)
    IGUAL           reduce using rule 24 (expr -> ID .)
    DIF             reduce using rule 24 (expr -> ID .)
    MENOR           reduce using rule 24 (expr -> ID .)
    MAIOR           reduce using rule 24 (expr -> ID .)
    LE              reduce using rule 24 (expr -> ID .)
    GE              reduce using rule 24 (expr -> ID .)
    RPAREN          reduce using rule 24 (expr -> ID .)


state 23

    (8) stmt -> ID ATRIB expr . PONTO_VIRG
    (12) expr -> expr . MAIS expr
    (13) expr -> expr . MENOS expr
    (14) expr -> expr . VEZES expr
    (15) expr -> expr . DIV expr
    (16) expr -> expr . IGUAL expr
    (17) expr -> expr . DIF expr
    (18) expr -> expr . MENOR expr
    (19) expr -> expr . MAIOR expr
    (20) expr -> expr . LE expr
    (21) expr -> expr . GE expr

    PONTO_VIRG      shift and go to state 29
    MAIS            shift and go to state 30
    MENOS           shift and go to state 31
    VEZES           shift and go to state 32
    DIV             shift and go to state 33
    IGUAL           shift and go to state 34
    DIF             shift and go to state 35
    MENOR           shift and go to state 36
    MAIOR           shift and go to state 37
    LE              shift and go to state 38
    GE              shift and go to state 39


state 24

    (22) expr -> NUM .

    PONTO_VIRG      reduce using rule 22 (expr -> NUM .)
    MAIS            reduce using rule 22 (expr -> NUM .)
    MENOS           reduce using rule 22 (expr -> NUM .)
    VEZES           reduce using rule 22 (expr -> NUM .)
    DIV             reduce using rule 22 (expr -> NUM .)
    IGUAL           reduce using rule 22 (expr -> NUM .)
    DIF             reduce using rule 22 (expr -> NUM .)
    MENOR           reduce using rule 22 (expr -> NUM .)
    MAIOR           reduce using rule 22 (expr -> NUM .)
    LE              reduce using rule 22 (expr -> NUM .)
    GE              reduce using rule 22 (expr -> NUM .)
    RPAREN          reduce using rule 22 (expr -> NUM .)


state 25

    (23) expr -> STRING .

    PONTO_VIRG      reduce using rule 23 (expr -> STRING .)
    MAIS            reduce using rule 23 (expr -> STRING .)
    MENOS           reduce using rule 23 (expr -> STRING .)
    VEZES           reduce using rule 23 (expr -> STRING .)
    DIV             reduce using rule 23 (expr -> STRING .)
    IGUAL           reduce using rule 23 (expr -> STRING .)
    DIF             reduce using rule 23 (expr -> STRING .)
    MENOR           reduce using rule 23 (expr -> STRING .)
    MAIOR           reduce using rule 23 (expr -> STRING .)
    LE              reduce using rule 23 (expr -> STRING .)
    GE              reduce using rule 23 (expr -> STRING .)
    RPAREN          reduce using rule 23 (expr -> STRING .)


state 26

    (25) expr -> LPAREN . expr RPAREN
    (12) expr -> . expr MAIS expr
    (13) expr -> . expr MENOS expr
    (14) expr -> . expr VEZES expr
    (15) expr -> . expr DIV expr
    (16) expr -> . expr IGUAL expr
    (17) expr -> . expr DIF expr
    (18) expr -> . expr MENOR expr
    (19) expr -> . expr MAIOR expr
    (20) expr -> . expr LE expr
    (21) expr -> . expr GE expr
    (22) expr -> . NUM
    (23) expr -> . STRING
    (24) expr -> . ID
    (25) expr -> . LPAREN expr RPAREN

    NUM             shift and go to state 24
    STRING          shift and go to state 25
    ID              shift and go to state 22
    LPAREN          shift and go to state 26

    expr                           shift and go to state 40

state 27

    (9) stmt -> SE LPAREN expr . RPAREN stmt
    (10) stmt -> SE LPAREN expr . RPAREN stmt SENAO stmt
    (12) expr -> expr . MAIS expr
    (13) expr -> expr . MENOS expr
    (14) expr -> expr . VEZES expr
    (15) expr -> expr . DIV expr
    (16) expr -> expr . IGUAL expr
    (17) expr -> expr . DIF expr
    (18) expr -> expr . MENOR expr
    (19) expr -> expr . MAIOR expr
    (20) expr -> expr . LE expr
    (21) expr -> expr . GE expr

    RPAREN          shift and go to state 41
    MAIS            shift and go to state 30
    MENOS           shift and go to state 31
    VEZES           shift and go to state 32
    DIV             shift and go to state 33
    IGUAL           shift and go to state 34
    DIF             shift and go to state 35
    MENOR           shift and go to state 36
    MAIOR           shift and go to state 37
    LE              shift and go to state 38
    GE              shift and go to state 39


state 28

    (11) stmt -> ENQUANTO LPAREN expr . RPAREN stmt
    (12) expr -> expr . MAIS expr
    (13) expr -> expr . MENOS expr
    (14) expr -> expr . VEZES expr
    (15) expr -> expr . DIV expr
    (16) expr -> expr . IGUAL expr
    (17) expr -> expr . DIF expr
    (18) expr -> expr . MENOR expr
    (19) expr -> expr . MAIOR expr
    (20) expr -> expr . LE expr
    (21) expr -> expr . GE expr

    RPAREN          shift and go to state 42
    MAIS            shift and go to state 30
    MENOS           shift and go to state 31
    VEZES           shift and go to state 32
    DIV             shift and go to state 33
    IGUAL           shift and go to state 34
    DIF             shift and go to state 35
    MENOR           shift and go to state 36
    MAIOR           shift and go to state 37
    LE              shift and go to state 38
    GE              shift and go to state 39


state 29

    (8) stmt -> ID ATRIB expr PONTO_VIRG .

    ID              reduce using rule 8 (stmt -> ID ATRIB expr PONTO_VIRG .)
    SE              reduce using rule 8 (stmt -> ID ATRIB expr PONTO_VIRG .)
    ENQUANTO        reduce using rule 8 (stmt -> ID ATRIB expr PONTO_VIRG .)
    $end            reduce using rule 8 (stmt -> ID ATRIB expr PONTO_VIRG .)
    SENAO           reduce using rule 8 (stmt -> ID ATRIB expr PONTO_VIRG .)


state 30

    (12) expr -> expr MAIS . expr
    (12) expr -> . expr MAIS expr
    (13) expr -> . expr MENOS expr
    (14) expr -> . expr VEZES expr
    (15) expr -> . expr DIV expr
    (16) expr -> . expr IGUAL expr
    (17) expr -> . expr DIF expr
    (18) expr -> . expr MENOR expr
    (19) expr -> . expr MAIOR expr
    (20) expr -> . expr LE expr
    (21) expr -> . expr GE expr
    (22) expr -> . NUM
    (23) expr -> . STRING
    (24) expr -> . ID
    (25) expr -> . LPAREN expr RPAREN

    NUM             shift and go to state 24
    STRING          shift and go to state 25
    ID              shift and go to state 22
    LPAREN          shift and go to state 26

    expr                           shift and go to state 43

state 31

    (13) expr -> expr MENOS . expr
    (12) expr -> . expr MAIS expr
    (13) expr -> . expr MENOS expr
    (14) expr -> . expr VEZES expr
    (15) expr -> . expr DIV expr
    (16) expr -> . expr IGUAL expr
    (17) expr -> . expr DIF expr
    (18) expr -> . expr MENOR expr
    (19) expr -> . expr MAIOR expr
    (20) expr -> . expr LE expr
    (21) expr -> . expr GE expr
    (22) expr -> . NUM
    (23) expr -> . STRING
    (24) expr -> . ID
    (25) expr -> . LPAREN expr RPAREN

    NUM             shift and go to state 24
    STRING          shift and go to state 25
    ID              shift and go to state 22
    LPAREN          shift and go to state 26

    expr                           shift and go to state 44

state 32

    (14) expr -> expr VEZES . expr
    (12) expr -> . expr MAIS expr
    (13) expr -> . expr MENOS expr
    (14) expr -> . expr VEZES expr
    (15) expr -> . expr DIV expr
    (16) expr -> . expr IGUAL expr
    (17) expr -> . expr DIF expr
    (18) expr -> . expr MENOR expr
    (19) expr -> . expr MAIOR expr
    (20) expr -> . expr LE expr
    (21) expr -> . expr GE expr
    (22) expr -> . NUM
    (23) expr -> . STRING
    (24) expr -> . ID
    (25) expr -> . LPAREN expr RPAREN

    NUM             shift and go to state 24
    STRING          shift and go to state 25
    ID              shift and go to state 22
    LPAREN          shift and go to state 26

    expr                           shift and go to state 45

state 33

    (15) expr -> expr DIV . expr
    (12) expr -> . expr MAIS expr
    (13) expr -> . expr MENOS expr
    (14) expr -> . expr VEZES expr
    (15) expr -> . expr DIV expr
    (16) expr -> . expr IGUAL expr
    (17) expr -> . expr DIF expr
    (18) expr -> . expr MENOR expr
    (19) expr -> . expr MAIOR expr
    (20) expr -> . expr LE expr
    (21) expr -> . expr GE expr
    (22) expr -> . NUM
    (23) expr -> . STRING
    (24) expr -> . ID
    (25) expr -> . LPAREN expr RPAREN

    NUM             shift and go to state 24
    STRING          shift and go to state 25
    ID              shift and go to state 22
    LPAREN          shift and go to state 26

    expr                           shift and go to state 46

state 34

    (16) expr -> expr IGUAL . expr
    (12) expr -> . expr MAIS expr
    (13) expr -> . expr MENOS expr
    (14) expr -> . expr VEZES expr
    (15) expr -> . expr DIV expr
    (16) expr -> . expr IGUAL expr
    (17) expr -> . expr DIF expr
    (18) expr -> . expr MENOR expr
    (19) expr -> . expr MAIOR expr
    (20) expr -> . expr LE expr
    (21) expr -> . expr GE expr
    (22) expr -> . NUM
    (23) expr -> . STRING
    (24) expr -> . ID
    (25) expr -> . LPAREN expr RPAREN

    NUM             shift and go to state 24
    STRING          shift and go to state 25
    ID              shift and go to state 22
    LPAREN          shift and go to state 26

    expr                           shift and go to state 47

state 35

    (17) expr -> expr DIF . expr
    (12) expr -> . expr MAIS expr
    (13) expr -> . expr MENOS expr
    (14) expr -> . expr VEZES expr
    (15) expr -> . expr DIV expr
    (16) expr -> . expr IGUAL expr
    (17) expr -> . expr DIF expr
    (18) expr -> . expr MENOR expr
    (19) expr -> . expr MAIOR expr
    (20) expr -> . expr LE expr
    (21) expr -> . expr GE expr
    (22) expr -> . NUM
    (23) expr -> . STRING
    (24) expr -> . ID
    (25) expr -> . LPAREN expr RPAREN

    NUM             shift and go to state 24
    STRING          shift and go to state 25
    ID              shift and go to state 22
    LPAREN          shift and go to state 26

    expr                           shift and go to state 48

state 36

    (18) expr -> expr MENOR . expr
    (12) expr -> . expr MAIS expr
    (13) expr -> . expr MENOS expr
    (14) expr -> . expr VEZES expr
    (15) expr -> . expr DIV expr
    (16) expr -> . expr IGUAL expr
    (17) expr -> . expr DIF expr
    (18) expr -> . expr MENOR expr
    (19) expr -> . expr MAIOR expr
    (20) expr -> . expr LE expr
    (21) expr -> . expr GE expr
    (22) expr -> . NUM
    (23) expr -> . STRING
    (24) expr -> . ID
    (25) expr -> . LPAREN expr RPAREN

    NUM             shift and go to state 24
    STRING          shift and go to state 25
    ID              shift and go to state 22
    LPAREN          shift and go to state 26

    expr                           shift and go to state 49

state 37

    (19) expr -> expr MAIOR . expr
    (12) expr -> . expr MAIS expr
    (13) expr -> . expr MENOS expr
    (14) expr -> . expr VEZES expr
    (15) expr -> . expr DIV expr
    (16) expr -> . expr IGUAL expr
    (17) expr -> . expr DIF expr
    (18) expr -> . expr MENOR expr
    (19) expr -> . expr MAIOR expr
    (20) expr -> . expr LE expr
    (21) expr -> . expr GE expr
    (22) expr -> . NUM
    (23) expr -> . STRING
    (24) expr -> . ID
    (25) expr -> . LPAREN expr RPAREN

    NUM             shift and go to state 24
    STRING          shift and go to state 25
    ID              shift and go to state 22
    LPAREN          shift and go to state 26

    expr                           shift and go to state 50

state 38

    (20) expr -> expr LE . expr
    (12) expr -> . expr MAIS expr
    (13) expr -> . expr MENOS expr
    (14) expr -> . expr VEZES expr
    (15) expr -> . expr DIV expr
    (16) expr -> . expr IGUAL expr
    (17) expr -> . expr DIF expr
    (18) expr -> . expr MENOR expr
    (19) expr -> . expr MAIOR expr
    (20) expr -> . expr LE expr
    (21) expr -> . expr GE expr
    (22) expr -> . NUM
    (23) expr -> . STRING
    (24) expr -> . ID
    (25) expr -> . LPAREN expr RPAREN

    NUM             shift and go to state 24
    STRING          shift and go to state 25
    ID              shift and go to state 22
    LPAREN          shift and go to state 26

    expr                           shift and go to state 51

state 39

    (21) expr -> expr GE . expr
    (12) expr -> . expr MAIS expr
    (13) expr -> . expr MENOS expr
    (14) expr -> . expr VEZES expr
    (15) expr -> . expr DIV expr
    (16) expr -> . expr IGUAL expr
    (17) expr -> . expr DIF expr
    (18) expr -> . expr MENOR expr
    (19) expr -> . expr MAIOR expr
    (20) expr -> . expr LE expr
    (21) expr -> . expr GE expr
    (22) expr -> . NUM
    (23) expr -> . STRING
    (24) expr -> . ID
    (25) expr -> . LPAREN expr RPAREN

    NUM             shift and go to state 24
    STRING          shift and go to state 25
    ID              shift and go to state 22
    LPAREN          shift and go to state 26

    expr                           shift and go to state 52

state 40

    (25) expr -> LPAREN expr . RPAREN
    (12) expr -> expr . MAIS expr
    (13) expr -> expr . MENOS expr
    (14) expr -> expr . VEZES expr
    (15) expr -> expr . DIV expr
    (16) expr -> expr . IGUAL expr
    (17) expr -> expr . DIF expr
    (18) expr -> expr . MENOR expr
    (19) expr -> expr . MAIOR expr
    (20) expr -> expr . LE expr
    (21) expr -> expr . GE expr

    RPAREN          shift and go to state 53
    MAIS            shift and go to state 30
    MENOS           shift and go to state 31
    VEZES           shift and go to state 32
    DIV             shift and go to state 33
    IGUAL           shift and go to state 34
    DIF             shift and go to state 35
    MENOR           shift and go to state 36
    MAIOR           shift and go to state 37
    LE              shift and go to state 38
    GE              shift and go to state 39


state 41

    (9) stmt -> SE LPAREN expr RPAREN . stmt
    (10) stmt -> SE LPAREN expr RPAREN . stmt SENAO stmt
    (8) stmt -> . ID ATRIB expr PONTO_VIRG
    (9) stmt -> . SE LPAREN expr RPAREN stmt
    (10) stmt -> . SE LPAREN expr RPAREN stmt SENAO stmt
    (11) stmt -> . ENQUANTO LPAREN expr RPAREN stmt

    ID              shift and go to state 10
    SE              shift and go to state 11
    ENQUANTO        shift and go to state 12

    stmt                           shift and go to state 54

state 42

    (11) stmt -> ENQUANTO LPAREN expr RPAREN . stmt
    (8) stmt -> . ID ATRIB expr PONTO_VIRG
    (9) stmt -> . SE LPAREN expr RPAREN stmt
    (10) stmt -> . SE LPAREN expr RPAREN stmt SENAO stmt
    (11) stmt -> . ENQUANTO LPAREN expr RPAREN stmt

    ID              shift and go to state 10
    SE              shift and go to state 11
    ENQUANTO        shift and go to state 12

    stmt                           shift and go to state 55

state 43

    (12) expr -> expr MAIS expr .
    (12) expr -> expr . MAIS expr
    (13) expr -> expr . MENOS expr
    (14) expr -> expr . VEZES expr
    (15) expr -> expr . DIV expr
    (16) expr -> expr . IGUAL expr
    (17) expr -> expr . DIF expr
    (18) expr -> expr . MENOR expr
    (19) expr -> expr . MAIOR expr
    (20) expr -> expr . LE expr
    (21) expr -> expr . GE expr

    PONTO_VIRG      reduce using rule 12 (expr -> expr MAIS expr .)
    MAIS            reduce using rule 12 (expr -> expr MAIS expr .)
    MENOS           reduce using rule 12 (expr -> expr MAIS expr .)
    IGUAL           reduce using rule 12 (expr -> expr MAIS expr .)
    DIF             reduce using rule 12 (expr -> expr MAIS expr .)
    MENOR           reduce using rule 12 (expr -> expr MAIS expr .)
    MAIOR           reduce using rule 12 (expr -> expr MAIS expr .)
    LE              reduce using rule 12 (expr -> expr MAIS expr .)
    GE              reduce using rule 12 (expr -> expr MAIS expr .)
    RPAREN          reduce using rule 12 (expr -> expr MAIS expr .)
    VEZES           shift and go to state 32
    DIV             shift and go to state 33

  ! VEZES           [ reduce using rule 12 (expr -> expr MAIS expr .) ]
  ! DIV             [ reduce using rule 12 (expr -> expr MAIS expr .) ]
  ! MAIS            [ shift and go to state 30 ]
  ! MENOS           [ shift and go to state 31 ]
  ! IGUAL           [ shift and go to state 34 ]
  ! DIF             [ shift and go to state 35 ]
  ! MENOR           [ shift and go to state 36 ]
  ! MAIOR           [ shift and go to state 37 ]
  ! LE              [ shift and go to state 38 ]
  ! GE              [ shift and go to state 39 ]


state 44

    (13) expr -> expr MENOS expr .
    (12) expr -> expr . MAIS expr
    (13) expr -> expr . MENOS expr
    (14) expr -> expr . VEZES expr
    (15) expr -> expr . DIV expr
    (16) expr -> expr . IGUAL expr
    (17) expr -> expr . DIF expr
    (18) expr -> expr . MENOR expr
    (19) expr -> expr . MAIOR expr
    (20) expr -> expr . LE expr
    (21) expr -> expr . GE expr

    PONTO_VIRG      reduce using rule 13 (expr -> expr MENOS expr .)
    MAIS            reduce using rule 13 (expr -> expr MENOS expr .)
    MENOS           reduce using rule 13 (expr -> expr MENOS expr .)
    IGUAL           reduce using rule 13 (expr -> expr MENOS expr .)
    DIF             reduce using rule 13 (expr -> expr MENOS expr .)
    MENOR           reduce using rule 13 (expr -> expr MENOS expr .)
    MAIOR           reduce using rule 13 (expr -> expr MENOS expr .)
    LE              reduce using rule 13 (expr -> expr MENOS expr .)
    GE              reduce using rule 13 (expr -> expr MENOS expr .)
    RPAREN          reduce using rule 13 (expr -> expr MENOS expr .)
    VEZES           shift and go to state 32
    DIV             shift and go to state 33

  ! VEZES           [ reduce using rule 13 (expr -> expr MENOS expr .) ]
  ! DIV             [ reduce using rule 13 (expr -> expr MENOS expr .) ]
  ! MAIS            [ shift and go to state 30 ]
  ! MENOS           [ shift and go to state 31 ]
  ! IGUAL           [ shift and go to state 34 ]
  ! DIF             [ shift and go to state 35 ]
  ! MENOR           [ shift and go to state 36 ]
  ! MAIOR           [ shift and go to state 37 ]
  ! LE              [ shift and go to state 38 ]
  ! GE              [ shift and go to state 39 ]


state 45

    (14) expr -> expr VEZES expr .
    (12) expr -> expr . MAIS expr
    (13) expr -> expr . MENOS expr
    (14) expr -> expr . VEZES expr
    (15) expr -> expr . DIV expr
    (16) expr -> expr . IGUAL expr
    (17) expr -> expr . DIF expr
    (18) expr -> expr . MENOR expr
    (19) expr -> expr . MAIOR expr
    (20) expr -> expr . LE expr
    (21) expr -> expr . GE expr

    PONTO_VIRG      reduce using rule 14 (expr -> expr VEZES expr .)
    MAIS            reduce using rule 14 (expr -> expr VEZES expr .)
    MENOS           reduce using rule 14 (expr -> expr VEZES expr .)
    VEZES           reduce using rule 14 (expr -> expr VEZES expr .)
    DIV             reduce using rule 14 (expr -> expr VEZES expr .)
    IGUAL           reduce using rule 14 (expr -> expr VEZES expr .)
    DIF             reduce using rule 14 (expr -> expr VEZES expr .)
    MENOR           reduce using rule 14 (expr -> expr VEZES expr .)
    MAIOR           reduce using rule 14 (expr -> expr VEZES expr .)
    LE              reduce using rule 14 (expr -> expr VEZES expr .)
    GE              reduce using rule 14 (expr -> expr VEZES expr .)
    RPAREN          reduce using rule 14 (expr -> expr VEZES expr .)

  ! MAIS            [ shift and go to state 30 ]
  ! MENOS           [ shift and go to state 31 ]
  ! VEZES           [ shift and go to state 32 ]
  ! DIV             [ shift and go to state 33 ]
  ! IGUAL           [ shift and go to state 34 ]
